<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <LinearLayout
            style="@style/RegisterFields">

            <EditText
                android:id="@+id/register_teacher_first_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"/>

            <EditText
                android:id="@+id/register_teacher_last_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name" />

        </LinearLayout>

        <EditText
            android:id="@+id/register_teacher_telephone_number_edit_text"
            style="@style/RegisterFields"
            android:inputType="number"
            android:hint="@string/telephone_number" />

        <EditText
            android:id="@+id/register_teacher_subject_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/subject" />

        <EditText
            android:id="@+id/register_teacher_city_edit_text"
            style="@style/RegisterFields"
            android:hint="@string/city" />

        <TextView
            android:id="@+id/register_teacher_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default16_margin"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:textColor="@color/red" />

        <ProgressBar
            android:id="@+id/register_teacher_loading_progress_bar"
            android:layout_width="@dimen/progress_bar_dimens"
            android:layout_height="@dimen/progress_bar_dimens"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/register_teacher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_margin="@dimen/default8_margin" />

    </LinearLayout>

</ScrollView>