<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        style="@style/RegisterFields">
        <EditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/RegisterFields">
        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login_error_text_view"
        style="@style/RegisterFields"
        android:visibility="gone"
        android:background="@color/red" />

    <ProgressBar
        android:id="@+id/login_loading_progress_bar"
        android:layout_width="@dimen/progress_bar_dimens"
        android:layout_height="@dimen/progress_bar_dimens"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        style="@style/RegisterFields"
        android:layout_marginTop="@dimen/default16_margin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/click_register_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_register"
        android:layout_margin="@dimen/default16_margin"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:gravity="center_horizontal" />

</LinearLayout>